edit: le CRUD ecoles add:validation, add:documentation, add:securité
